Try to solve title overflow issue in header/logo

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -1107,6 +1107,11 @@
 				}
 			}
 
+		/* Header */
+			#logo {
+				margin: 1.5em 1.25em 1.25em 1.25em;
+			}
+
 	}
 
 /* Special centering class */
